Adding second graph for part A

--- a/school/elec_313/lab2/tex/report.tex
+++ b/school/elec_313/lab2/tex/report.tex
@@ -107,6 +107,13 @@
   \caption{\label{fig:part_a_graph} Diode characteristics measured in Part A.}
 \end{figure}
 
+\begin{figure}[hbtp]
+  \begin{center}
+    \input{part_a2}
+  \end{center}
+  \caption{\label{fig:part_a_graph2} $\ln{(I_d)}$ vs. $V_d$.}
+\end{figure}
+
 \subsection{Part B}
 \label{sec:result_b}
 
