--- a/school/elec_313/lab2/tex/report.tex
+++ b/school/elec_313/lab2/tex/report.tex
@@ -49,6 +49,9 @@
 \section{Objective}
 \label{sec:objective}
 
+The objective is to observe the operation of a diode, and its
+conformance to the Schlockley equation:
+\[I_D = I_S \left(e^{\frac{V_D}{V_T}} - 1\right)\]
 
 \section{Schematics}
 \label{sec:schematics}
@@ -57,20 +60,19 @@
 \subsection*{Circuit Tested}
 \label{sec:ckt_tested}
 
-%\begin{figure}[hbtp]
-%  \centering
-%    \includegraphics[]{img/ckt_tested}
-%  \caption{\label{fig:circuit} Circuit being tested.  $C_1 = C_2 = \SI{1}{\micro\farad}$}
-%\end{figure}
+\begin{figure}[hbtp]
+  \begin{center}
+    \includegraphics[]{img/circuit1}
+  \end{center}
+  \caption{\label{fig:circuit1} Circuit used for Part A and Part B.}
+\end{figure}
 
-\subsection*{Test Configuration}
-\label{sec:test_config}
-
-%\begin{figure}[htbp]
-%  \centering
-%  \includegraphics[]{img/test_config}
-%  \caption{\label{fig:test_config} Test Configuration}
-%\end{figure}
+\begin{figure}[hbtp]
+  \begin{center}
+    \includegraphics[]{img/circuit2}
+  \end{center}
+  \caption{\label{fig:circuit2} Circuit used for Part C.}
+\end{figure}
 
 \section{Procedure}
 \label{sec:procedure}
