--- a/school/elec_313/lab2/tex/report.tex
+++ b/school/elec_313/lab2/tex/report.tex
@@ -119,6 +119,17 @@ accumsan nisl.
 \subsection{Part A}
 \label{sec:result_a}
 
+\begin{table}[hbtp]
+  \centering
+  \begin{tabular}{*{4}{c}}
+    \textbf{Name} & \textbf{Nominal} & \textbf{Measured} & \textbf{\% Error} \\
+    & (\si{\ohm}) & (\si{\ohm}) & \\
+    \hline
+    $R_1$ & 470 & 465.3 & 1.00 \\
+  \end{tabular}
+  \caption{\label{tab:percent_err} Comparison of nominal and measured resistance in Part A.}
+\end{table}
+    
 \begin{figure}[hbtp]
   \centering
   \input{part_a}
@@ -175,8 +186,13 @@ accumsan nisl.
 % unnecessary vertical spaces between equations, and still visually
 % separate in source, put a comment between them.
 \begin{equation}
-  \label{eqn:schlockley}
+  \%_{error} = \frac{|nominal - measured|}{nominal}100\%
+  \label{eqn:percent_err}
+\end{equation}
+%
+\begin{equation}
   I_D = I_S \left(e^{\frac{V_D}{V_T}} - 1\right)
+  \label{eqn:schlockley}
 \end{equation}
 %%
 %\begin{equation}
@@ -208,5 +224,59 @@ accumsan nisl.
 %  \label{eqn:R_m}
 %  R_m = A_v R_i
 %\end{equation}
+
+\section{Apendix}
+\label{sec:appendix}
+
+
+\begin{table}[hbtp]
+  \centering
+  \begin{tabular}{cccc}
+    $V_s$ (V) & $V_d$ (V) & $I_d$ (mA) & $ln(I_d)$ (mA) \\
+    \hline
+    -5.00 & -5.000 & 0.01 & -4.605170 \\
+    -4.50 & -4.500 & 0.01 & -4.605170 \\
+    -4.00 & -4.000 & 0.01 & -4.605170 \\
+    -3.50 & -3.500 & 0.01 & -4.605170 \\
+    -3.00 & -3.000 & 0.01 & -4.605170 \\
+    -2.50 & -2.500 & 0.01 & -4.605170 \\
+    -2.00 & -2.000 & 0.01 & -4.605170 \\
+    -1.50 & -1.500 & 0.01 & -4.605170 \\
+    -1.00 & -1.000 & 0.01 & -4.605170 \\
+    -0.50 & -0.500 & 0.01 & -4.605170 \\
+    0.00 & 0.277 & 0.01 & -4.605170 \\
+    0.25 & 0.254 & 0.01 & -4.605170 \\
+    0.50 & 0.461 & 0.10 & -2.302585 \\
+    0.75 & 0.536 & 0.46 & -0.776529 \\
+    1.00 & 0.570 & 0.92 & -0.083382 \\
+    1.25 & 0.591 & 1.40 & 0.336472 \\
+    1.50 & 0.606 & 1.89 & 0.636577 \\
+    1.75 & 0.618 & 2.39 & 0.871293 \\
+    2.00 & 0.627 & 2.90 & 1.064711 \\
+    2.25 & 0.635 & 3.41 & 1.226712 \\
+    2.50 & 0.642 & 3.92 & 1.366092 \\
+    2.75 & 0.648 & 4.44 & 1.490654 \\
+    3.00 & 0.653 & 4.95 & 1.599388 \\
+    3.25 & 0.658 & 5.47 & 1.699279 \\
+    3.50 & 0.662 & 5.99 & 1.790091 \\
+    3.75 & 0.666 & 6.51 & 1.873339 \\
+    4.00 & 0.670 & 7.03 & 1.950187 \\
+    4.25 & 0.673 & 7.55 & 2.021548 \\
+    4.50 & 0.676 & 8.08 & 2.089392 \\
+    4.75 & 0.679 & 8.60 & 2.151762 \\
+    5.00 & 0.682 & 9.13 & 2.211566 \\
+    5.50 & 0.687 & 10.18 & 2.320425 \\
+    6.00 & 0.692 & 11.23 & 2.418589 \\
+    6.50 & 0.696 & 12.30 & 2.509599 \\
+    7.00 & 0.699 & 13.36 & 2.592265 \\
+    7.50 & 0.703 & 14.42 & 2.668616 \\
+    8.00 & 0.706 & 15.49 & 2.740195 \\
+    8.50 & 0.709 & 16.56 & 2.806990 \\
+    9.00 & 0.712 & 17.66 & 2.871302 \\
+    9.50 & 0.714 & 18.75 & 2.931194 \\
+    10.00 & 0.717 & 19.84 & 2.987700 \\
+  \end{tabular}
+  \caption{\label{tab:part_a} Diode characteristics measured in Part A.}
+\end{table}
 
 \end{document}
